--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,12 +29,11 @@ jobs:
       - name: Configure
         run: |
           sudo apt-get install rename
-          /usr/bin/python3 -m pip install -r /__w/vial-qmk/vial-qmk/requirements.txt
 
       - name: Rename
         run: |
           cd ergohaven_fw/ergohaven_fw
-          rename 's/(rev1_|rev2_)//; s/ergohaven_/'${GITHUB_REF_NAME}'_'/ *.uf2
+          rename 's/(rev\d_)//; s/ergohaven_/'${GITHUB_REF_NAME}'_'/ *.uf2
 
       - name: Create Release
         uses: marvinpinto/action-automatic-releases@latest
